--- a/templates/upload_opg.html
+++ b/templates/upload_opg.html
@@ -10,7 +10,8 @@
                 }}</span></p>
     </div>
 
-    <form method="POST" enctype="multipart/form-data" class="card" style="padding: 40px; text-align: center;">
+    <form method="POST" action="{{ url_for('main.upload_opg', patient_id=patient.id) }}" enctype="multipart/form-data"
+        class="card" style="padding: 40px; text-align: center;">
         <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
 
         <div class="form-group" style="margin-bottom: 40px;">
