--- a/templates/update_patient.html
+++ b/templates/update_patient.html
@@ -14,6 +14,11 @@
         <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
 
         <div class="form-group">
+            <label>PATIENT ID</label>
+            <input type="text" name="patient_id" value="{{ patient.patient_id }}" required>
+        </div>
+
+        <div class="form-group">
             <label>FULL NAME</label>
             <input type="text" name="name" value="{{ patient.name or '' }}" placeholder="OPTIONAL">
         </div>
